cv related latex files used during graduate admits (formatted)

--- a/resume.tex
+++ b/resume.tex
@@ -60,7 +60,7 @@
 \position{ Image Processing  {\enskip\cdotp\enskip} Systems and Controls {\enskip\cdotp\enskip}Robotics {\enskip\cdotp\enskip}Interaction{\enskip\cdotp\enskip}Deep Learning}
 %\address{}
 
-\mobile{(+91) 7985054878}
+\mobile{(XXX) XXXXXXXXXX}
 \email{amit.y@alumni.iitgn.ac.in}
 \homepage{sites.google.com/view/amit-yadav}
 %\github{posquit0}
@@ -128,7 +128,6 @@
 % \input{resume/writing.tex}
 % \input{resume/committees.tex}
 \input{resume/projects.tex}
-\ihead*{\hfill Curriculum Vitae, Amit Kumar Singh Yadav, PhD in Robotics, UM ID # 51804587,  Page \pagemark \ of 4}
 \begin{cvparagraph} \textbf{Note:} Experiences include full‑time commitment of min 40 hours/week; projects require a commitment of about 12 hours/week  \end{cvparagraph}
 \vspace{-0.3cm}
 \input{resume/short-term-projects.tex}
